fix contrast for .box-important according to best practices

--- a/static/public/css/styles.css
+++ b/static/public/css/styles.css
@@ -37,7 +37,7 @@
     border-style: solid;
     border-width: 1px;
     border-color: #1b1e21;
-    background-color: lightcoral;
+    background-color: #DE2B2B;
     padding: 5px;
     color: white;
 }
